--- a/SogetiStaffingPlanner/Views/Home/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Home/Index.cshtml
@@ -1,31 +1,197 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+
+    <title>Sogeti Staffing Planner</title>
+
+    <link rel="stylesheet" href="../../Content/Site.css">
+
+</head>
+
+<body>
+    <div class='navBar'>
+       <img class='navLogo' src="../../Images/logo.png" width='200px'>
+        <span class='navTitle'>Staffing Planner</span>
+        <ul class='navItems'>
+            <li>HOME</li>
+            <li>ACCOUNTS</li>
+            <li>PROJECTS</li>
+            <li>OPPORTUNITIES</li>
+            <li>REPORTS</li>
+            <li>CONTACT</li>
+        </ul>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class='main'>
+        <h1>Practice Manager View</h1>
+        <table class='clientView'>
+            <tr>
+                <th>ACCOUNT NAME</th>
+                <th>SUB-BUSINESS</th>
+                <th>PROJECT NAME</th>
+                <th>SPONSOR</th>
+                <th>PROJECT VALUE</th>
+                <th>REQUIRED SKILLS</th>
+                <th>PROJECT TYPE</th>
+                <th>STATUS</th>
+                <th>RATE CARD / HR</th>
+                <th>PROJECT PRACTICE</th>
+                <th>MAX TARGET GRADE</th>
+                <th>TARGETED CONSULTANTS</th>
+                <th>LOCATION</th>
+                <th>ACTUAL START DATE</th>
+                <th>DURATION</th>
+                <th>PRIORITY</th>
+                <th># OF ROLES</th>
+                <th>AE</th>
+                <th>LAST EDITED ON</th>
+            </tr>
+            <tr>
+                <td>GE</td>
+                <td>Power</td>
+                <td>Alstom</td>
+                <td>Pete Rogers</td>
+                <td>null</td>
+                <td>Python</td>
+                <td>T&amp;M</td>
+                <td>Sold</td>
+                <td>$102</td>
+                <td>Application and Cloud</td>
+                <td>A3</td>
+                <td>Zoe, Mitch, Dan</td>
+                <td>Onshore</td>
+                <td>1/1/2020</td>
+                <td>1 year</td>
+                <td>Medium</td>
+                <td>5</td>
+                <td>Mitch</td>
+                <td>5/18/2018</td>
+            </tr>
+            <tr>
+                <td>GE</td>
+                <td>Power</td>
+                <td>Alstom</td>
+                <td>Pete Rogers</td>
+                <td>null</td>
+                <td>Python</td>
+                <td>T&amp;M</td>
+                <td>Sold</td>
+                <td>$102</td>
+                <td>Application and Cloud</td>
+                <td>A3</td>
+                <td>Zoe, Mitch, Dan</td>
+                <td>Onshore</td>
+                <td>1/1/2020</td>
+                <td>1 year</td>
+                <td>Medium</td>
+                <td>5</td>
+                <td>Mitch</td>
+                <td>5/18/2018</td>
+            </tr>
+            <tr>
+                <td>GE</td>
+                <td>Power</td>
+                <td>Alstom</td>
+                <td>Pete Rogers</td>
+                <td>null</td>
+                <td>Python</td>
+                <td>T&amp;M</td>
+                <td>Sold</td>
+                <td>$102</td>
+                <td>Application and Cloud</td>
+                <td>A3</td>
+                <td>Zoe, Mitch, Dan</td>
+                <td>Onshore</td>
+                <td>1/1/2020</td>
+                <td>1 year</td>
+                <td>Medium</td>
+                <td>5</td>
+                <td>Mitch</td>
+                <td>5/18/2018</td>
+            </tr>
+            <tr>
+                <td>GE</td>
+                <td>Power</td>
+                <td>Alstom</td>
+                <td>Pete Rogers</td>
+                <td>null</td>
+                <td>Python</td>
+                <td>T&amp;M</td>
+                <td>Sold</td>
+                <td>$102</td>
+                <td>Application and Cloud</td>
+                <td>A3</td>
+                <td>Zoe, Mitch, Dan</td>
+                <td>Onshore</td>
+                <td>1/1/2020</td>
+                <td>1 year</td>
+                <td>Medium</td>
+                <td>5</td>
+                <td>Mitch</td>
+                <td>5/18/2018</td>
+            </tr>
+            <tr>
+                <td>GE</td>
+                <td>Power</td>
+                <td>Alstom</td>
+                <td>Pete Rogers</td>
+                <td>null</td>
+                <td>Python</td>
+                <td>T&amp;M</td>
+                <td>Sold</td>
+                <td>$102</td>
+                <td>Application and Cloud</td>
+                <td>A3</td>
+                <td>Zoe, Mitch, Dan</td>
+                <td>Onshore</td>
+                <td>1/1/2020</td>
+                <td>1 year</td>
+                <td>Medium</td>
+                <td>5</td>
+                <td>Mitch</td>
+                <td>5/18/2018</td>
+            </tr>
+            <tr>
+                <td>GE</td>
+                <td>Power</td>
+                <td>Alstom</td>
+                <td>Pete Rogers</td>
+                <td>null</td>
+                <td>Python</td>
+                <td>T&amp;M</td>
+                <td>Sold</td>
+                <td>$102</td>
+                <td>Application and Cloud</td>
+                <td>A3</td>
+                <td>Zoe, Mitch, Dan</td>
+                <td>Onshore</td>
+                <td>1/1/2020</td>
+                <td>1 year</td>
+                <td>Medium</td>
+                <td>5</td>
+                <td>Mitch</td>
+                <td>5/18/2018</td>
+            </tr>
+        </table>
+        <div class='pageCount'>
+            <ul class='pageList'>
+                <li>&lt;</li>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>&gt;</li>
+            </ul>
+        </div>
+        <br><br><br><br>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</body>
+</html>
