20-B Update Index and shared CSS

--- a/SogetiStaffingPlanner/Content/main.css
+++ b/SogetiStaffingPlanner/Content/main.css
@@ -18,9 +18,9 @@ tr:nth-child(even) {background-color: #EEEEEE;}
     position: absolute;
     top: 0;
     width: 100%;
--webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 }
 
 .navLogo{
@@ -50,6 +50,11 @@ box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
     padding: 25px;
 }
 
+.navItems li:hover{
+    background-color: #FF5722;
+    cursor: pointer;
+}
+
 .main{
     background-color: white;
     width: 95%;
@@ -64,9 +69,10 @@ box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 
 .clientView{
     width: 100%;
+    display: inline-block;
     border-collapse: collapse;
     font-size: 13px;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .pageCount{
