--- a/SogetiStaffingPlanner/Views/Home/index.cshtml
+++ b/SogetiStaffingPlanner/Views/Home/index.cshtml
@@ -33,8 +33,8 @@
         <h1>Practice Manager View</h1>
         <table class='clientView'>
             <tr>
-                <th>ACCOUNT NAME</th>
-                <th>SUB-BUSINESS</th>
+                <th>CLIENT NAME</th>
+                <th>CLIENT SUB-BUSINESS</th>
                 <th>PROJECT NAME</th>
                 <th>SPONSOR</th>
                 <th>PROJECT VALUE</th>
