--- a/SogetiStaffingPlanner/Views/Home/Index.html
+++ b/SogetiStaffingPlanner/Views/Home/Index.html
@@ -7,7 +7,9 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <script type="text/javascript" src="../../Scripts/vue.min.js"></script>
+    <link rel="stylesheet" href="../../Content/Site.css" >
+    <script type="text/javascript" 
+    src="../../Scripts/vue.min.js"></script>
     <title>Sogeti Staffing Planner</title>
 </head>
 
@@ -17,25 +19,27 @@
             <h1>Practice Manager View</h1>
             <table class='clientView'>
                 <tr>
-                    <th>ACCOUNT NAME</th>
-                    <th>SUB-BUSINESS</th>
-                    <th>PROJECT NAME</th>
-                    <th>SPONSOR</th>
-                    <th>PROJECT VALUE</th>
-                    <th>REQUIRED SKILLS</th>
-                    <th>PROJECT TYPE</th>
-                    <th>STATUS</th>
-                    <th>RATE CARD / HR</th>
-                    <th>PROJECT PRACTICE</th>
-                    <th>MAX TARGET GRADE</th>
-                    <th>TARGETED CONSULTANTS</th>
-                    <th>LOCATION</th>
-                    <th>ACTUAL START DATE</th>
-                    <th>DURATION</th>
+                    <th>NUMBER OF POSITIONS</th>
+                    <th>UNIT</th>
+                    <th>OPPORTUNITY NAME</th>
+                    <th>POSITION NAME</th>
                     <th>PRIORITY</th>
-                    <th># OF ROLES</th>
+                    <th>SOLD</th>
+                    <th>STATUS</th>
+                    <th>CLIENT</th>
                     <th>AE</th>
-                    <th>LAST EDITED ON</th>
+                    <th>ACT LEAD</th>
+                    <th>SKILL SET</th>
+                    <th>MIN CONSULTANT GRADE</th>
+                    <th>MAX CONSULTANT GRADE</th>
+                    <th>RATE</th>
+                    <th>DATE</th>
+                    <th>DURATION</th>
+                    <th>HIRE CANDIDATES</th>
+                    <th>PROPOSED</th>
+                    <th>REJECTED</th>
+                    <th>ACCEPTED</th>
+                    <th>NOTES</th>
                 </tr>
                 <tr v-for="post in posts">
                     <td> {{ post.AccountName }} </td>
@@ -56,6 +60,8 @@
                     <td> {{ post.Priority }}</td>
                     <td> {{ post.NumberOfGoals }}</td>
                     <td> {{ post.AE }}</td>
+                    <td> {{ post.LastEdited }}</td>
+                    <td> {{ post.LastEdited }}</td>
                     <td> {{ post.LastEdited }}</td>
                 </tr>
             </table>
