--- a/SogetiStaffingPlanner/Views/Home/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Home/Index.cshtml
@@ -42,27 +42,27 @@
                     <th>NOTES</th>
                 </tr>
                 <tr v-for="post in posts">
-                    <td> {{ post.AccountName }} </td>
-                    <td> {{ post.SubBusiness }} </td>
-                    <td> {{ post.ProjectName }}</td>
-                    <td> {{ post.Sponsor }}</td>
-                    <td> {{ post.ProjectValue }}</td>
-                    <td> {{ post.RequiredSkills }}</td>
-                    <td> {{ post.ProjectType }}</td>
-                    <td> {{ post.Status }}</td>
-                    <td> {{ post.RateCard_HR }}</td>
-                    <td> {{ post.ProjectPractice }}</td>
-                    <td> {{ post.MaxTargetGrade }}</td>
-                    <td> {{ post.TargetConsultants }}</td>
-                    <td> {{ post.Location }}</td>
-                    <td> {{ post.ActualStartDate }}</td>
-                    <td> {{ post.Duration }}</td>
+                    <td> {{ post.NumberOfPositions }} </td>
+                    <td> {{ post.UnitName }} </td>
+                    <td> {{ post.OpportunityName }}</td>
+                    <td> {{ post.PositionName }}</td>
                     <td> {{ post.Priority }}</td>
-                    <td> {{ post.NumberOfGoals }}</td>
-                    <td> {{ post.AE }}</td>
-                    <td> {{ post.LastEdited }}</td>
-                    <td> {{ post.LastEdited }}</td>
-                    <td> {{ post.LastEdited }}</td>
+                    <td> {{ post.SoldStatusName }}</td>
+                    <td> {{ post.OpportunityStatus }}</td>
+                    <td> {{ post.ClientSubBusiness }}</td>
+                    <td> {{ post.AEName }}</td>
+                    <td> {{ post.ACTName }}</td>
+                    <td> {{ post.Skillset }}</td>
+                    <td> {{ post.MinConsultantGrade }}</td>
+                    <td> {{ post.MaxConsultantGrade }}</td>
+                    <td> {{ post.Rate }}</td>
+                    <td> {{ post.ExpectedStartDate }}</td>
+                    <td> {{ post.Duration }}</td>
+                    <td> {{ post.HireCandidate }}</td>
+                    <td> {{ post.ProposedCandidate }}</td>
+                    <td> {{ post.RejectedCandidate }}</td>
+                    <td> {{ post.AcceptedCandidate }}</td>
+                    <td> {{ post.PositionNote }}</td>
                 </tr>
             </table>
         </div>
