Changes for Create new opportunity function, added save changes to db and json return. 06/18/18 Dakshnamoorthy Parivallal

--- a/SogetiStaffingPlanner/Views/Home/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
             </table>*@
         </div>
     
-    <form action="SetthisOpportunity" method="post">
+    <form action="/Opportunity/SetthisOpportunity" method="post">
         <label>Opportunity Id</label>
         <input type="text" name="OpportunityID" placeholder="Id here" />
         <br />
