changed client page to be the default index page. When adding, it alerts and clears the form.

--- a/SogetiStaffingPlanner/Views/Clients/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Clients/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "CreateClient";
 }
 
-<h2>Create a New Client</h2>
+<h2>Client List</h2>
 
 <div id="createClient" class="main">
     <label for="ClientName">Client Name: </label>
