Changed Addpositions.cshtml to Index.cshtml

--- a/SogetiStaffingPlanner/Views/Positions/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Positions/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div id="app" class="main">
-    <h1>Positions</h1>
+    <h1>Positions List</h1>
     <table >
         <tr>
             <th>Name</th>
