--- a/SogetiStaffingPlanner/Views/Clients/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Clients/Index.cshtml
@@ -6,38 +6,49 @@
 
 <div id="createClient" class="main">
     <h2>Client List</h2>
-
-    <div class="form-horizontal">
-        <label class="col-sm-3" for="ClientName">Client Name: </label>
-        <div class="col-sm-4">
-            <input class="form-control" type="text" v-model="ClientName" />
-        </div>
-        <div class="form-group"></div>
-
-        <label class="col-sm-3" for="ClientSubbusiness">Client Subbusiness </label>
-        <div class="col-sm-4">
-            <input class="form-control" type="text" v-model="ClientSubbusiness" />
-        </div>
-
-        <div class="form-group"></div>
-        <div class="col-sm-offset-3 col-sm-6">
-            <button class="btn btn-primary" v-on:click="onSubmit">Add</button>
-        </div>
+    <div v-if="addState === false">
+        <button v-on:click="addState = true" class="btn btn-primary">
+            Add Position
+        </button>
         <div class="form-group"></div>
     </div>
+    <template v-else>
+        <div class="form-horizontal">
+            <label class="col-sm-3" for="ClientName">Client Name: </label>
+            <div class="col-sm-4">
+                <input class="form-control" type="text" v-model="ClientName" />
+            </div>
+            <div class="form-group"></div>
 
+            <label class="col-sm-3" for="ClientSubbusiness">Client Subbusiness </label>
+            <div class="col-sm-4">
+                <input class="form-control" type="text" v-model="ClientSubbusiness" />
+            </div>
 
-    <table id="clientView">
+            <div class="form-group"></div>
+            <div class="col-sm-offset-3 col-sm-6">
+                <button class="btn btn-primary" v-on:click="onSubmit">Add</button>
+                <button class="btn btn-danger" v-on:click="addState = false">Cancel</button>
+            </div>
+            <div class="form-group"></div>
+        </div>
 
-        <tr>
-            <th>Client Name</th>
-            <th>Client Subbusiness</th>
-        </tr>
-        <tr v-for="client in clients">
-            <td>{{ client.ClientName }}</td>
-            <td>{{ client.ClientSubbusiness }}</td>
-        </tr>
-    </table>
+    </template>
+
+    <template>
+        <table id="clientView">
+
+            <tr>
+                <th>Client Name</th>
+                <th>Client Subbusiness</th>
+            </tr>
+            <tr v-for="client in clients">
+                <td>{{ client.ClientName }}</td>
+                <td>{{ client.ClientSubbusiness }}</td>
+            </tr>
+        </table>
+    </template>
+
 </div>
 
 <script type="text/javascript" src="../../Scripts/App/Client/client.js"></script>
