minor changes to views

--- a/SogetiStaffingPlanner/Views/Clients/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Clients/Index.cshtml
@@ -8,7 +8,7 @@
     <h2>Client List</h2>
     <div v-if="addState === false">
         <button v-on:click="addState = true" class="btn btn-primary">
-            Add Position
+            Add Client
         </button>
         <div class="form-group"></div>
     </div>
