--- a/SogetiStaffingPlanner/Views/Positions/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Positions/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div id="app" class="main">
-    <h1>Positions List</h1>
+    <h1>Position List</h1>
     <div v-if="addState === false">
         <button v-on:click="addState = true" class="btn btn-primary">
             Add Position
